// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateGithubFiles > the compose deploy workflow > matches its snapshot 1`] = `
"name: Deploy

# Which stages exist, and which are protected, is read from \`stages\` in
# gkm.config.ts by the project's own gkm, through the stages action — nothing
# here names one:
#
#   push to main       builds every deployed stage, deploys those not protected
#   release published  the protected stages (publish the drafted release)
#   run workflow       the one stage you name, at the ref you name
on:
  push:
    branches: [main]
  release:
    types: [published]
  workflow_dispatch:
    inputs:
      stage:
        description: A deployed stage from gkm.config.ts
        required: true
        type: string
      ref:
        description: The commit, tag or branch to deploy (default the latest on main)
        required: false
        type: string

permissions:
  contents: read

jobs:
  stages:
    name: Pick stages
    runs-on: ubuntu-latest
    outputs:
      build: \${{ steps.stages.outputs.build }}
      deploy: \${{ steps.stages.outputs.deploy }}
      has-build: \${{ steps.stages.outputs.has-build }}
      has-deploy: \${{ steps.stages.outputs.has-deploy }}
      aws-region: \${{ steps.stages.outputs.aws-region }}
      resources: \${{ steps.stages.outputs.resources }}
    steps:
      - uses: actions/checkout@v4

      - uses: pnpm/action-setup@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 22
          cache: pnpm

      - name: Install
        run: pnpm install --frozen-lockfile

      # Runs \`gkm stages --github-output\`: the rules for each event are the
      # installed CLI's, and a manual run naming a stage gkm.config.ts does not
      # deploy fails here.
      - name: Read stages from gkm.config.ts
        id: stages
        uses: geekmidas/toolbox/actions/stages@main # pin to a commit SHA: see the action's README
        with:
          stage: \${{ inputs.stage }}

  build:
    name: Build \${{ matrix.stage }}
    needs: stages
    if: needs.stages.outputs.has-build == 'true'
    runs-on: ubuntu-latest
    strategy:
      fail-fast: false
      matrix:
        stage: \${{ fromJSON(needs.stages.outputs.build) }}
    # One GitHub environment per stage: its secrets, variables and approvals.
    environment: \${{ matrix.stage }}
    permissions:
      contents: read
      packages: write
      id-token: write
    steps:
      - uses: actions/checkout@v4

      - uses: pnpm/action-setup@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 22
          cache: pnpm

      - name: Install
        run: pnpm install --frozen-lockfile

      - uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ github.actor }}
          password: \${{ secrets.GITHUB_TOKEN }}

      # A site's public URLs are built into it, so the build reads the stage's
      # secrets store. With secrets.store on SSM or Secrets Manager the job
      # assumes the stage's role (AWS_ROLE_ARN, set by gkm deploy:github);
      # with the default 'file' store there is no role to assume.
      - name: Assume the stage's AWS role
        if: needs.stages.outputs.aws-region != ''
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: \${{ vars.AWS_ROLE_ARN }}
          aws-region: \${{ needs.stages.outputs.aws-region }}

      # Builds and pushes every image the stage runs, tagged with the commit,
      # and starts nothing.
      - name: Build and push
        run: pnpm exec gkm compose --stage "$STAGE" --build --push --tag "$SHA" --digests-file digests.json
        env:
          STAGE: \${{ matrix.stage }}
          SHA: \${{ github.sha }}

      # What each tag pointed at when it was pushed. A deploy runs these
      # digests, so a tag moved since cannot change what is released.
      - uses: actions/upload-artifact@v4
        with:
          name: digests-\${{ matrix.stage }}
          path: digests.json
          retention-days: 90

  deploy:
    name: Deploy \${{ matrix.stage }}
    needs: [stages, build]
    # The build is skipped on a release or a manual run: deploy then anyway,
    # but never after a failed build.
    if: \${{ !cancelled() && !failure() && needs.stages.outputs.has-deploy == 'true' }}
    runs-on: ubuntu-latest
    strategy:
      fail-fast: false
      matrix:
        stage: \${{ fromJSON(needs.stages.outputs.deploy) }}
    environment: \${{ matrix.stage }}
    concurrency:
      group: deploy-\${{ matrix.stage }}
      cancel-in-progress: false
    permissions:
      contents: read
      actions: read
      id-token: write
    env:
      # Whether the stage has resources the deploy creates — a provider's
      # bucket and key (deploy.<kind>.<stage>), DNS records through a provider
      # in dns: the runner creates them with the stage's role and DNS token,
      # so neither reaches the server, which deploys with --skip-resources.
      RESOURCES_ON_RUNNER: \${{ contains(fromJSON(needs.stages.outputs.resources || '[]'), matrix.stage) }}
    steps:
      # A release deploys its tag's commit, never its target_commitish — the
      # branch it was drafted against, which has moved on since.
      - name: Resolve the commit
        id: commit
        run: |
          case "$EVENT" in
            release) ref="tags/$TAG" ;;
            workflow_dispatch) ref="\${REF:-$SHA}" ;;
            *) ref="$SHA" ;;
          esac
          sha=$(gh api "repos/$REPO/commits/$ref" --jq .sha)
          echo "Deploying $sha"
          echo "sha=$sha" >> "$GITHUB_OUTPUT"
        env:
          GH_TOKEN: \${{ github.token }}
          REPO: \${{ github.repository }}
          EVENT: \${{ github.event_name }}
          TAG: \${{ github.event.release.tag_name }}
          REF: \${{ inputs.ref }}
          SHA: \${{ github.sha }}

      # The deploy's resources, here on the runner: each provider's bucket
      # and key (written into the stage's secrets store), and every public
      # host's DNS record — a new app's included, one per host, never a
      # wildcard — written through the provider where it is missing or out of
      # date and read back from it. The stage's secrets (GKM_SERVER_IPV4
      # among them) are read with the stage's role; the DNS token is a secret
      # on this stage's environment. A missing credential fails here, before
      # anything is deployed.
      - name: Check out the commit
        if: env.RESOURCES_ON_RUNNER == 'true'
        uses: actions/checkout@v4
        with:
          ref: \${{ steps.commit.outputs.sha }}

      - if: env.RESOURCES_ON_RUNNER == 'true'
        uses: pnpm/action-setup@v4
      - if: env.RESOURCES_ON_RUNNER == 'true'
        uses: actions/setup-node@v4
        with:
          node-version: 22
          cache: pnpm

      - name: Install
        if: env.RESOURCES_ON_RUNNER == 'true'
        run: pnpm install --frozen-lockfile

      - name: Assume the stage's AWS role
        if: env.RESOURCES_ON_RUNNER == 'true' && needs.stages.outputs.aws-region != ''
        uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: \${{ vars.AWS_ROLE_ARN }}
          aws-region: \${{ needs.stages.outputs.aws-region }}

      - name: Create the stage's resources
        if: env.RESOURCES_ON_RUNNER == 'true'
        run: pnpm exec gkm deploy --stage "$STAGE" --resources-only
        env:
          STAGE: \${{ matrix.stage }}
          GODADDY_API_TOKEN: \${{ secrets.GODADDY_API_TOKEN }}
          HOSTINGER_API_TOKEN: \${{ secrets.HOSTINGER_API_TOKEN }}

      # The push run of this workflow that built the commit for this stage:
      # this run on a push, the newest one with the stage's digests otherwise.
      - name: Find the commit's push build
        id: build
        run: |
          if [ "$EVENT" = push ]; then
            echo "run-id=$RUN_ID" >> "$GITHUB_OUTPUT"
            exit 0
          fi
          workflow=\${WORKFLOW_REF%%@*}
          workflow=\${workflow##*/}
          for id in $(gh run list --repo "$REPO" --workflow "$workflow" --event push --commit "$SHA" --limit 20 --json databaseId --jq '.[].databaseId'); do
            found=$(gh api "repos/$REPO/actions/runs/$id/artifacts?name=$ARTIFACT" --jq '[.artifacts[] | select(.expired | not)] | length')
            if [ "$found" -gt 0 ]; then
              echo "run-id=$id" >> "$GITHUB_OUTPUT"
              exit 0
            fi
          done
          echo "run-id=" >> "$GITHUB_OUTPUT"
        env:
          GH_TOKEN: \${{ github.token }}
          REPO: \${{ github.repository }}
          EVENT: \${{ github.event_name }}
          RUN_ID: \${{ github.run_id }}
          WORKFLOW_REF: \${{ github.workflow_ref }}
          SHA: \${{ steps.commit.outputs.sha }}
          ARTIFACT: digests-\${{ matrix.stage }}

      - name: Download digests-\${{ matrix.stage }}
        if: steps.build.outputs.run-id != ''
        uses: actions/download-artifact@v4
        with:
          name: digests-\${{ matrix.stage }}
          run-id: \${{ steps.build.outputs.run-id }}
          github-token: \${{ github.token }}

      - name: No digests — deploying by tag
        if: steps.build.outputs.run-id == ''
        run: |
          echo "::warning title=$STAGE deploys by tag, not digest::No push build of $SHA kept digests-$STAGE (never built, or older than 90 days). The server runs whatever the tag $SHA points at in the registry now, which anyone who can push there could have replaced."
        env:
          STAGE: \${{ matrix.stage }}
          SHA: \${{ steps.commit.outputs.sha }}

      # Each environment holds DEPLOY_SSH_KEY (secret) and DEPLOY_KNOWN_HOSTS,
      # DEPLOY_HOST, DEPLOY_USER and DEPLOY_PATH (variables): the server's
      # host key is pinned, never accepted on first sight. DEPLOY_PATH is a
      # clone of this repository, with a docker login to ghcr.io
      # and the stage's secrets.
      #
      # Every value reaches the server as an argument to a quoted heredoc —
      # nothing is pasted into the script.
      - name: Deploy on the server
        run: |
          mkdir -p ~/.ssh && chmod 700 ~/.ssh
          (umask 077 && printf '%s\\n' "$SSH_KEY" > ~/.ssh/deploy_key)
          printf '%s\\n' "$KNOWN_HOSTS" > ~/.ssh/known_hosts
          digests=""
          if [ -f digests.json ]; then digests=$(base64 -w0 < digests.json); fi
          ssh -i ~/.ssh/deploy_key -o IdentitiesOnly=yes -o StrictHostKeyChecking=yes \\
            "$DEPLOY_USER@$DEPLOY_HOST" \\
            "bash -s -- $(printf '%q ' "$STAGE" "$SHA" "$DEPLOY_PATH" "$digests" "$RESOURCES_ON_RUNNER")" <<'REMOTE'
          set -euo pipefail
          stage=$1 sha=$2 dir=$3 digests=$4 resources_on_runner=$5
          cd "$dir"
          git fetch --quiet origin
          git checkout --quiet --detach "$sha"
          pnpm install --frozen-lockfile
          args=(--stage "$stage" --tag "$sha")
          if [ -n "$digests" ]; then
            mkdir -p .gkm
            printf '%s' "$digests" | base64 -d > ".gkm/digests-$stage.json"
            args+=(--digests-file ".gkm/digests-$stage.json")
          fi
          # Created and confirmed from the runner already.
          if [ "$resources_on_runner" = true ]; then args+=(--skip-resources); fi
          pnpm exec gkm compose "\${args[@]}"
          REMOTE
        env:
          SSH_KEY: \${{ secrets.DEPLOY_SSH_KEY }}
          KNOWN_HOSTS: \${{ vars.DEPLOY_KNOWN_HOSTS }}
          DEPLOY_HOST: \${{ vars.DEPLOY_HOST }}
          DEPLOY_USER: \${{ vars.DEPLOY_USER }}
          DEPLOY_PATH: \${{ vars.DEPLOY_PATH }}
          STAGE: \${{ matrix.stage }}
          SHA: \${{ steps.commit.outputs.sha }}
"
`;

exports[`generateGithubFiles > the dokploy deploy workflow > matches its snapshot 1`] = `
"name: Deploy

# Which stages exist, and which are protected, is read from \`stages\` in
# gkm.config.ts by the project's own gkm, through the stages action — nothing
# here names one:
#
#   push to main       every deployed stage that is not protected
#   release published  the protected stages (publish the drafted release)
#   run workflow       the one stage you name, at the ref you name
on:
  push:
    branches: [main]
  release:
    types: [published]
  workflow_dispatch:
    inputs:
      stage:
        description: A deployed stage from gkm.config.ts
        required: true
        type: string
      ref:
        description: The commit, tag or branch to deploy (default the latest on main)
        required: false
        type: string

permissions:
  contents: read

jobs:
  stages:
    name: Pick stages
    runs-on: ubuntu-latest
    outputs:
      build: \${{ steps.stages.outputs.build }}
      deploy: \${{ steps.stages.outputs.deploy }}
      has-build: \${{ steps.stages.outputs.has-build }}
      has-deploy: \${{ steps.stages.outputs.has-deploy }}
      aws-region: \${{ steps.stages.outputs.aws-region }}
      resources: \${{ steps.stages.outputs.resources }}
    steps:
      - uses: actions/checkout@v4

      - uses: pnpm/action-setup@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 22
          cache: pnpm

      - name: Install
        run: pnpm install --frozen-lockfile

      # Runs \`gkm stages --github-output\`: the rules for each event are the
      # installed CLI's, and a manual run naming a stage gkm.config.ts does not
      # deploy fails here.
      - name: Read stages from gkm.config.ts
        id: stages
        uses: geekmidas/toolbox/actions/stages@main # pin to a commit SHA: see the action's README
        with:
          stage: \${{ inputs.stage }}

  deploy:
    name: Deploy \${{ matrix.stage }}
    needs: stages
    if: needs.stages.outputs.has-deploy == 'true'
    runs-on: ubuntu-latest
    strategy:
      fail-fast: false
      matrix:
        stage: \${{ fromJSON(needs.stages.outputs.deploy) }}
    # One GitHub environment per stage: its secrets and variables, and any
    # approval rule you put on a protected one.
    environment: \${{ matrix.stage }}
    concurrency:
      group: deploy-\${{ matrix.stage }}
      cancel-in-progress: false
    permissions:
      contents: read
    steps:
      # The event's own commit — a release's tag, the push — or the ref a
      # manual run names.
      - uses: actions/checkout@v4
        with:
          ref: \${{ inputs.ref }}

      - uses: pnpm/action-setup@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 22
          cache: pnpm

      - name: Install
        run: pnpm install --frozen-lockfile

      # The stage's secrets are kept in the encrypted .gkm/secrets/<stage>.json,
      # and each environment holds its key as GKM_SECRETS_KEY. .gkm/ is
      # gitignored, so a checkout has the key but not the file: set
      # secrets.store in gkm.config.ts to a store CI can reach before deploying
      # from here.
      # Owner-only, as the CLI writes its own keys. The stage reaches the shell
      # as a variable, never pasted into the script: on a manual run it is
      # whatever was typed.
      - name: Stage secrets key
        run: |
          mkdir -p ~/.gkm/keys/shop/shop && chmod 700 ~/.gkm/keys/shop/shop
          (umask 077 && printf '%s' "$KEY" > ~/.gkm/keys/shop/shop/"$STAGE".key)
        env:
          KEY: \${{ secrets.GKM_SECRETS_KEY }}
          STAGE: \${{ matrix.stage }}

      # Builds, releases and health-checks the stage through deploy.default
      # in gkm.config.ts, and fails the job if any of it fails.
      - name: Deploy
        run: pnpm exec gkm deploy --stage "$STAGE"
        env:
          STAGE: \${{ matrix.stage }}
          DOKPLOY_API_TOKEN: \${{ secrets.DOKPLOY_API_TOKEN }}
          DOKPLOY_ENDPOINT: \${{ vars.DOKPLOY_ENDPOINT }}
          GODADDY_API_TOKEN: \${{ secrets.GODADDY_API_TOKEN }}
          HOSTINGER_API_TOKEN: \${{ secrets.HOSTINGER_API_TOKEN }}
"
`;

exports[`generateGithubFiles > the sst deploy workflow > matches its snapshot 1`] = `
"name: Deploy

# Which stages exist, and which are protected, is read from \`stages\` in
# gkm.config.ts by the project's own gkm, through the stages action — nothing
# here names one:
#
#   push to main       every deployed stage that is not protected
#   release published  the protected stages (publish the drafted release)
#   run workflow       the one stage you name, at the ref you name
on:
  push:
    branches: [main]
  release:
    types: [published]
  workflow_dispatch:
    inputs:
      stage:
        description: A deployed stage from gkm.config.ts
        required: true
        type: string
      ref:
        description: The commit, tag or branch to deploy (default the latest on main)
        required: false
        type: string

permissions:
  contents: read

jobs:
  stages:
    name: Pick stages
    runs-on: ubuntu-latest
    outputs:
      build: \${{ steps.stages.outputs.build }}
      deploy: \${{ steps.stages.outputs.deploy }}
      has-build: \${{ steps.stages.outputs.has-build }}
      has-deploy: \${{ steps.stages.outputs.has-deploy }}
      aws-region: \${{ steps.stages.outputs.aws-region }}
      resources: \${{ steps.stages.outputs.resources }}
    steps:
      - uses: actions/checkout@v4

      - uses: pnpm/action-setup@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 22
          cache: pnpm

      - name: Install
        run: pnpm install --frozen-lockfile

      # Runs \`gkm stages --github-output\`: the rules for each event are the
      # installed CLI's, and a manual run naming a stage gkm.config.ts does not
      # deploy fails here.
      - name: Read stages from gkm.config.ts
        id: stages
        uses: geekmidas/toolbox/actions/stages@main # pin to a commit SHA: see the action's README
        with:
          stage: \${{ inputs.stage }}

  deploy:
    name: Deploy \${{ matrix.stage }}
    needs: stages
    if: needs.stages.outputs.has-deploy == 'true'
    runs-on: ubuntu-latest
    strategy:
      fail-fast: false
      matrix:
        stage: \${{ fromJSON(needs.stages.outputs.deploy) }}
    # One GitHub environment per stage: its secrets and variables, and any
    # approval rule you put on a protected one.
    environment: \${{ matrix.stage }}
    concurrency:
      group: deploy-\${{ matrix.stage }}
      cancel-in-progress: false
    permissions:
      contents: read
      id-token: write
    steps:
      # The event's own commit — a release's tag, the push — or the ref a
      # manual run names.
      - uses: actions/checkout@v4
        with:
          ref: \${{ inputs.ref }}

      - uses: pnpm/action-setup@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 22
          cache: pnpm

      - name: Install
        run: pnpm install --frozen-lockfile

      # An IAM role GitHub assumes through OIDC — no long-lived AWS keys. Set
      # AWS_ROLE_ARN as a variable on each environment.
      - uses: aws-actions/configure-aws-credentials@v4
        with:
          role-to-assume: \${{ vars.AWS_ROLE_ARN }}
          aws-region: af-south-1

      # Builds, releases and health-checks the stage through deploy.default
      # in gkm.config.ts, and fails the job if any of it fails.
      - name: Deploy
        run: pnpm exec gkm deploy --stage "$STAGE"
        env:
          STAGE: \${{ matrix.stage }}
"
`;
